# JobSniffing

./: .autonomy-current.part-00  .autonomy-current.part-01  .autonomy-current.part-02a  .autonomy-current.part-02b  .autonomy-current.part-02c  .autonomy-current.part-02d  .autonomy-current.part-02e  .autonomy-current.part-02f  .autonomy-current.part-02g  .autonomy-current.part-02h  .autonomy-phase1.tar.gz.b64  .env.example  .gitignore  AUTONOMY_PROGRESS.md  README.md  instructions  jobsniffing-consolidation-v1.bundle  pyproject.toml
.github/workflows/: autonomy-bootstrap.yml  export-workday-source.yml  materialize-credentials-v1.yml  test.yml  tests.yml  verify-icims-overlay.yml  verify-taleo-v1.yml  verify-wizard-v1.yml  verify-workday-v1.yml
android-shell/capacitor/: README.md
app/: config.py  main.py
app/db/: sqlite.py
app/domain/: enums.py  models.py  safety.py  schemas.py  state_machine.py
app/services/: discovery_service.py  scoring_service.py  settings_service.py  tracking_service.py
automation_bridge/: package.json
automation_bridge/src/: runner.ts
docs/: AUTONOMY_PROGRESS.md  api-contract.md  apk-build.md  architecture.md  audit.md  status-machine.md  termux.md
overlays/credentials-v1/: apply.sh  finalize.sh
overlays/icims-v1/: ARCHITECTURE.md  CHECKPOINT.md  LOCAL_ARCHIVE.md  MANIFEST  NEXT.md  README.md  REDACTION.md  REMOTE_LIMIT.md  SAFETY.md  STATUS  TESTS.md  apply.sh  finalize.sh  (+2 more)
scripts/: healthcheck.sh  materialize-autonomy.sh  termux-bootstrap.sh  termux-healthcheck.sh  termux-run.sh  ubuntu-bootstrap.sh  ubuntu-run.sh  verify.sh
(+70 files in other folders)
