[project]
name = "jobsniffing"
version = "0.2.0"
description = "Android-first, local-first job discovery and human review queue."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<1",
  "uvicorn>=0.30,<1",
  "jinja2>=3.1,<4",
  "pydantic>=2.7,<3",
  "httpx>=0.27,<1",
]

[project.optional-dependencies]
test = ["pytest>=8,<10"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
"app.web" = ["templates/*.html", "static/*.css", "static/*.js"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
